@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  11 Apr 2006; Roy Marples <uberlord@gentoo.org>:
+
+    udhcpc.sh now works with the -q|--quit option again, #129437.
+
   09 Apr 2006; Roy Marples <uberlord@gentoo.org>:
 
     RC_COLDPLUG now controls if we add coldplugged services to the boot
